--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,6 +54,13 @@ nav {
     flex: 1;
     text-align: center;
     z-index: 2;
+    cursor: pointer;
+}
+
+.disabled {
+    pointer-events: none;
+    user-select: none;
+    cursor: text;
 }
 
 #cover {
@@ -111,7 +118,7 @@ h1 {
 
 }
 
-#main-heading {
+.heading {
     position: relative;
     margin: 0 auto;
     margin-bottom: 70px;
@@ -121,11 +128,13 @@ h1 {
     clip-path: polygon(0 33.3%, 6% 0, 94% 0, 100% 33.3%, 100% 66.6%, 94% 100%, 6% 100%, 0 66.6%);
 }
 
-#heading-text {
+.heading-text {
     background-color: var(--yellow);
     width: 710px;
     height: 60px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     clip-path: polygon(0 33.3%, 5% 0, 95% 0, 100% 33.3%, 100% 66.6%, 95% 100%, 5% 100%, 0 66.6%);
 }
 
@@ -198,6 +207,35 @@ h1 {
 .hours>p,
 .location>p {
     text-align: center;
+}
+
+.contact-header {
+    height: 120px !important;
+    width: 300px !important;
+}
+
+.contact-outer,
+.contact-inner {
+    height: 175px;
+    position: relative;
+}
+
+.contact-inner>p {
+    padding-left: 50px;
+}
+
+.contact-inner>h3 {
+    margin: 18.720px 0;
+}
+
+.contact-pic {
+    height: 100px;
+    width: 150px;
+    background-size: cover;
+    position: absolute;
+    border-radius: 20px;
+    top: 30px;
+    right: 30px;
 }
 
 /* footer area */
