--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
     --honey: #eca43b;
     --chocolate: #c16a08;
     --yellow: #FFC60B;
+    --dark-orange: #df880a;
 }
 
 *,
@@ -236,6 +237,61 @@ h1 {
     border-radius: 20px;
     top: 30px;
     right: 30px;
+}
+
+.sub-container {
+    width: 350px !important;
+    height: 60px !important;
+    margin-bottom: 0 !important;
+    margin-top: 70px;
+}
+
+.sub-header {
+    width: 350px !important;
+    height: 60px !important;
+}
+
+h2 {
+    font-size: 35px;
+    font-family: 'Potta One', cursive;
+}
+
+.menu-hive {
+    top: 25px;
+    right: 7px;
+}
+
+.menu-pic {
+    height: 250px;
+    width: 250px;
+    background-size: cover;
+    border-radius: 20px;
+    position: absolute;
+    bottom: 10px;
+    right: 45px;
+    border: 2px solid var(--dark-orange);
+}
+
+.menu-outer {
+    position: relative;
+    height: 480px;
+}
+
+.menu-outer>h3 {
+    padding-left: 20px;
+    font-size: 25px;
+    margin: 25px 0;
+}
+
+.menu-outer>p {
+    padding-left: 50px;
+    margin: 16px 0;
+}
+
+.item-price {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 20px 0;
 }
 
 /* footer area */
